--- a/config/ts-config/tsconfig.base.json
+++ b/config/ts-config/tsconfig.base.json
@@ -13,7 +13,8 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Node10",
+    "lib": ["ES2015"],
     "module": "CommonJS",
     "noFallthroughCasesInSwitch": true,
     // 这个普遍反馈会让代码变得啰嗦，暂定遵循原本 bot 的设置，关闭
