--- a/examples/code-to-embedding/package.json
+++ b/examples/code-to-embedding/package.json
@@ -12,9 +12,11 @@
     "lint": "eslint ./ --cache"
   },
   "dependencies": {
+    "@langchain/community": "^0.0.24",
     "@langchain/openai": "^0.0.9",
+    "@xenova/transformers": "^2.9.0",
     "ignore": "^5.3.0",
-    "langchain": "^0.1.2"
+    "langchain": "^0.1.11"
   },
   "devDependencies": {
     "@tecvan-infra/eslint-config": "workspace:*",
