--- a/examples/code-to-embedding/tsconfig.json
+++ b/examples/code-to-embedding/tsconfig.json
@@ -3,6 +3,7 @@
   "extends": "@tecvan-infra/ts-config/tsconfig.node.json",
   "compilerOptions": {
     "rootDir": "./",
+    "module": "NodeNext",
     "outDir": "./dist"
   },
   "include": ["src"]
