chore: setup project stucture
chore: setup project stucture

chore: support file upload

chore: merge chunks

chore: setup project stucture

chore: setup project stucture

chore: support file upload

chore: merge chunks

chore: web content for upload

chore: rewrite as vue3 components

chore: rewrite as vue3 components

chore: fix eslint errors

chore: fix eslint errors

chore: upgrade rush version

chore: remove

chore: remove

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,7 +12,9 @@
     "aaron-bond.better-comments",
     "jasonnutter.search-node-modules",
     "mikestead.dotenv",
-    "vscode-icons-team.vscode-icons"
+    "vscode-icons-team.vscode-icons",
+    "Vue.volar",
+    "Vue.vscode-typescript-vue-plugin"
   ],
   "unwantedRecommendations": [
     "nucllear.vscode-extension-auto-import",
